Get prerequisites
